--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <video autoplay loop>
         <source src="resourses/videos/excursion.mp4" type="video/mp4">
     </video>
+    <h2 class="header--secondar">Your personal travel guide</h2>
+    <h4 class="header--sub-header">Excursion remembers places you like, and reccommends new points of interest around you.</h4>
+
 </body>
 </html>
