Added footer text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </video>
     <h2 class="header--secondar">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and reccommends new points of interest around you.</h4>
+    <p><img src="resourses/css/images/camp.jpg"></p>
+    <p><img src="resourses/css/images/phone.png"></p>
+    <h4 class="header--sub-header">Coming soon for iphone and android</h4>
+    p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
+
 
 </body>
 </html>
