--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <p><img src="resourses/css/images/camp.jpg"></p>
     <p><img src="resourses/css/images/phone.png"></p>
     <h4 class="header--sub-header">Coming soon for iphone and android</h4>
-    p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Excursion (coming soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
 
 
 </body>
